# dutch_sound_symbolism

./: 03_preprocess_corpus.py  04_train_ft.py  05a_ft_embed_targets.py  05b_ft_embed_attributes.py  05c_bert_embed_strings.py  06_correlation_analysis.py  07_correlation_analysis.R  08_regression_analysis.py  pyproject.toml  readme.md
.github/workflows/: build.yml
