[tool.poetry]
name = "dutch-sound-symbolism"
version = "0.0.0"
description = "Comparing word similarity from embeddings to human-rated word associations"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
filesplit = "^4.0.1"
pandas = "^2.2.2"
scipy = "^1.13.1"
pyreadr = "^0.5.0"
psycho_embeddings = { git = "https://github.com/MilaNLProc/psycho-embeddings.git", branch = "main" }
folia = "^2.5.11"
pybind11 = "^2.12.0"
wheel = "^0.43.0"
fasttext-wheel = "^0.9.2"
fasttext = { git = "https://github.com/facebookresearch/fastText.git" }
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
